--- a/source/partials/top/_header.slim
+++ b/source/partials/top/_header.slim
@@ -3,7 +3,7 @@ header.top-header
     .row
       .col-sm-6
         h2.h4.top-header-title
-          = image_tag 'logo-title.png', height: '60', alt: 'codian logo', class: 'icon'
+          = image_tag 'logo-title.png', height: '60', alt: 'webta logo', class: 'icon'
       .col-sm-6
         h6.text-right
           ul.list-inline.top-header-list
@@ -11,14 +11,14 @@ header.top-header
     .row
       .col-sm-12
         h1.h1#top-header-logo.text-center
-          = '株式会社コーディアン'
+          = 'ウェブタ'
           
       .col-sm-12
         #top-header-services.text-center
           h3.h2
             i.fa.fa-cube.fa-2x
           h3 サービス
-          p コーディアンでは以下のサービスを提供しています
+          p ウェブタでは以下のサービスを提供しています
           hr
           h3.h4 無料予約システム
           = link_to '//reserven.jp/', class: 'btn btn-default btn-lg', target: '_blank' do
