webta homepage launch.

--- a/source/layouts/main.erb
+++ b/source/layouts/main.erb
@@ -1,18 +1,15 @@
 <% wrap_layout :layout do %>
-  <%= partial 'partials/header' %>
+  <%= partial 'partials/nav' %>
   <main class='container main-container' role='main'>
-    <ul class="list-inline">
-      <%= partial 'partials/nav' %>
-    </ul>
     <section>
       <div class="row">
         <section class='col-sm-8'>
           <%= yield %>
         </section>
         <aside class='col-sm-4'>
-          <%= partial 'partials/top/search' %>
-          <hr />
           <%= partial 'partials/social/twitter' %>
+          <hr />
+          <%# partial 'partials/search' %>
         </aside>
       </div>
     </section>
