--- a/source/partials/_footer.html.slim
+++ b/source/partials/_footer.html.slim
@@ -10,5 +10,5 @@ footer
         .text-center
           ul.list-inline
             li= "©#{Time.zone.now.year} "
-            li= 'Codian inc.'
+            li= 'ウェブタ'
             li= 'All rights reserved.'
