--- a/source/calendar.html.slim
+++ b/source/calendar.html.slim
@@ -1,8 +1,8 @@
 ---
 pageable: true
 ---
-%h1
-  Archive for
+h1
+  | Archive for
   - case page_type
   - when 'day'
     = Date.new(year, month, day).strftime('%b %e %Y')
@@ -11,15 +11,15 @@ pageable: true
   - when 'year'
     = year
 - if paginate && num_pages > 1
-  %p
-    Page #{page_number} of #{num_pages}
+  p
+    | Page #{page_number} of #{num_pages}
   - if prev_page
-    %p= link_to 'Previous page', prev_page
-%ul
+    p= link_to 'Previous page', prev_page
+ul
   - page_articles.each_with_index do |article, i|
-    %li
+    li
       = link_to article.title, article
-      %span= article.date.strftime('%b %e')
+      span= article.date.strftime('%b %e')
 - if paginate
   - if next_page
-    %p= link_to 'Next page', next_page
+    p= link_to 'Next page', next_page
