--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,13 +1,45 @@
-= partial 'partials/top/header'
-.container
-  h3 最新情報
-  .row
-    .col-sm-8
-      ul.list-unstyled
-        - blog.articles[0...10].each do |article|
-          li
-            ul.list-inline
-              li= link_to article.title, article
+header.top-header
+  = partial 'partials/nav'
+  .container.main-container
+    .row
+      .col-sm-8
+        h1.text-center#top-header-title
+          strong= 'ウェブタ'
+        h2.text-center
+          strong= '個人事業主のためのITサポート'
+        h3.text-center
+          = 'ホームページ作成・受託開発・常駐契約'  
+        h5.text-center
+          = 'インターネット活用など各種相談承ります'
+        hr  
+        
+      .col-sm-4
+        = image_tag 'meishi.png', alt: '村上健太', class: 'img-responsive'
+        hr
+        .well
+          h4.text-center.strong= '最新情報'
+          ul.list-unstyled
+            - blog.articles[0...5].each do |article|
               li
-                small= article.date.strftime('%y年%m月%e日')
-    .col-sm-4
+                ul.list-inline
+                  li
+                    small= article.date.strftime('%y年%m月%e日')
+                  li= link_to article.title, article  
+br
+.container
+  .row
+    .col-sm-6
+      .h3
+        = '運営サービス'
+      h3.h4.text-center
+        strong クラウド無料予約システム
+      h3.h5.text-center
+        = link_to '//reserven.jp/', class: 'btn btn-default btn-lg', target: '_blank' do
+          = image_tag 'reserven_logo.png', height: '30', width: '30', alt: 'reserven logo', class: 'icon'
+          | Reserven リザーブン
+      h5.text-center
+        strong ホームページも簡単に作れます    
+      
+    .col-sm-6.text-center
+
+      = partial 'partials/social/facebook'
