--- a/source/partials/_footer.html.slim
+++ b/source/partials/_footer.html.slim
@@ -2,7 +2,8 @@ footer
   .container
     .row
       .col-sm-6
-        
+        .text-center
+          <iframe frameborder="0" scrolling="no" style="height: 180px; width: 275px;" src="https://www.timeticket.jp/items/16233/widget"></iframe>
       .col-sm-6
         = partial 'partials/social/facebook'
     .row
