--- a/source/assets/stylesheets/bootstrap-custom.scss
+++ b/source/assets/stylesheets/bootstrap-custom.scss
@@ -1,6 +1,6 @@
 // http://qiita.com/masamitsu-konya/items/e3630046774ac1fbd346
 // Core variables and mixins
-//@import "bootstrap/variables";
+@import "bootstrap/variables";
 @import "bootstrap/mixins";
 
 // Reset and dependencies
