--- a/source/partials/_head.html.slim
+++ b/source/partials/_head.html.slim
@@ -3,7 +3,9 @@ head
   meta(content="IE=edge;chrome=1" http-equiv="X-UA-Compatible")
   meta(content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' name='viewport')
   meta(content="oXMeCOrxqeA9NYbCnCrmdqrKNbW9BAAYuERNnW7_vCE" name="google-site-verification")
+  link(href=image_path('icon/favicon.ico') rel='icon' type='image/vnd.microsoft.icon')
   link(href='//fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css')
+
   title
     = current_article.title + ' - ' unless current_article.nil?
     = middleman_settings['blog']['title']
